[gd_scene load_steps=2 format=3 uid="uid://dy3mfgr4mjacr"]

[ext_resource type="Script" uid="uid://kfjt3nd6ckwq" path="res://scenes/ui/health_bar_ui.gd" id="1_v12qd"]

[node name="HealthBarUI" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
script = ExtResource("1_v12qd")
show_max_hp = true

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -8.0
offset_right = 30.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
show_percentage = false

[node name="Health" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1
alignment = 1

[node name="HealthLabel" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[node name="MaxHealthLabel" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 2
text = "/14"
